--- a/css/style.css
+++ b/css/style.css
@@ -149,6 +149,61 @@ header .company_logo {
 }
 
 
+/* side social media */
+
+.icon-bar {
+    position: fixed;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    right: 0;
+}
+
+.icon-bar a {
+    display: block;
+    text-align: center;
+    padding: 16px;
+    transition: all 0.3s ease;
+    color: white;
+    font-size: 20px;
+}
+
+.icon-bar a:hover {
+    background-color: #000;
+}
+
+.facebook {
+    background: #3B5998;
+    color: white;
+}
+
+.twitter {
+    background: #55ACEE;
+    color: white;
+}
+
+.google {
+    background: #dd4b39;
+    color: white;
+}
+
+.linkedin {
+    background: #007bb5;
+    color: white;
+}
+
+.youtube {
+    background: #bb0000;
+    color: white;
+}
+
+.content {
+    margin-left: 75px;
+    font-size: 30px;
+}
+
+
 /******************************header-start****************************/
 
 .common_heading_main {
@@ -272,6 +327,9 @@ header .company_logo {
     outline: none;
     box-shadow: 0 0 25px rgba(77, 77, 77, 0.438) inset;
 }
+
+
+/*  Our services*/
 
 .our-dent {
     padding: 50px 0;
