--- a/landing-2/css/style.css
+++ b/landing-2/css/style.css
@@ -118,7 +118,9 @@ section {
     transition: 0.4s;
     color: #fff;
 } */
-
+.colo-gre{
+    color: #09959f;
+}
 .overlap {
     width: 100%;
     height: 100vh;
@@ -159,6 +161,7 @@ header .company_logo {
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     right: 0;
+    z-index: 10;
 }
 
 .icon-bar a {
@@ -419,7 +422,9 @@ header .company_logo {
     width: 80%;
     margin: auto;
 }
-
+.teeth-sec .teeth-img img{
+    width: 100%;
+}
 
 /*  Our services*/
 
@@ -705,7 +710,7 @@ header .company_logo {
 }
 
 .group_details ul li {
-    color: #fff;
+    color: #ffffffb5;
     padding: 10px 0;
     line-height: 24px;
     font-size: 14px;
@@ -828,6 +833,9 @@ header .company_logo {
     line-height: 45px;
     letter-spacing: 1px;
 }
+.reg-now h2 .my-cl{
+    display: block;
+}
 
 .reg-now .btn-co {
     font-size: 18px;
@@ -931,6 +939,21 @@ footer .main-foo .right p {
     .container {
         width: 920px;
     }
+    
+    .group_details .main-gr .left{
+        width: 100%;
+    text-align: center;
+    }
+    .group_details .main-gr .right{
+        width: 100%;
+    }
+    .main_inner .swiper-button-next {
+        right: 43.5%;
+    }
+    .main_inner .swiper-button-prev {
+        left: 43.5%;
+    }
+   
 }
 
 
@@ -939,6 +962,43 @@ footer .main-foo .right p {
 @media (min-width: 768px) and (max-width: 991px) {
     .container {
         width: 740px;
+    }
+    .form-main .form-inn input{
+        width: 100%;
+    }
+    .main_inner .right .form-main .form-inn .btn-co{
+        width: 100%;
+    }
+    .main_inner .swiper-button-next {
+        right: 42%;
+    }
+    .main_inner .swiper-button-prev {
+        left: 42%;
+    }
+    .invisalign .main-in .left p{
+        padding-right: 9px;
+        font-size: 16px;
+    }
+    .invisalign .main-in .right ul li{
+        font-size: 16px;
+    }
+    .about .main-d .right p{
+        font-size: 14px;
+        line-height: 27px;
+    }
+    .about .main-d .right{
+        margin-left: 3%;
+    }
+    .group_details .main-gr .left{
+        width: 100%;
+    text-align: center;
+    }
+    .group_details .main-gr .right{
+        width: 100%;
+    }
+    .reg-now h2{
+        line-height: 43px;
+        font-size: 28px;
     }
 }
 
@@ -955,5 +1015,141 @@ footer .main-foo .right p {
     .container {
         width: 90%;
         padding: 0;
+    }
+    .main_inner .right{
+        width: 100%;
+    }
+    .form-main .form-inn input{
+        width: 100%;
+    }
+    .main_inner .left{
+        width: 100%;
+    }
+    .main_inner .left img{
+        width: 100%;
+    }
+    .main_inner p{
+        margin-top: 14px;
+        font-size: 14px;
+        line-height: 25px; 
+    }
+    .main_inner .swiper-button-next {
+        right: 41%;
+    }
+    .main_inner .swiper-button-prev {
+        left: 41%;
+    }
+    .main_inner p span{
+        display: unset;
+    }
+    .invisalign{
+        padding: 20px 0;
+    }
+    .invisalign .main-in .left,
+    .invisalign .main-in .right{
+        width: 100%;
+    }
+    .invisalign .main-in{
+        flex-direction: column;
+    }
+    .invisalign .main-in .right ul{
+        padding-left: 28px;
+        margin-top: 10px;
+    }
+    .invisalign h2{
+        margin-bottom: 10px;
+        font-size: 22px;
+    }
+    .invisalign .main-in .left p{
+        padding-right: 0;
+        line-height: 23px;
+        font-size: 14px;
+    }
+    .common_heading_main{
+        font-size: 22px;
+    }
+    .btn-co{
+        width: 100%;
+    }
+    .invisalign .main-in .right ul li{
+        font-size: 14px;
+    }
+
+    .teeth-sec{
+        padding: 20px 0;
+    }
+    .teeth-sec .head h2{
+        font-size: 25px;
+    }
+    .teeth-sec .head::before{
+        width: 60px;
+    }
+    .teeth-sec .head{
+        margin-bottom: 10px;
+    }
+    .about .main-d{
+        flex-direction: column;
+    }
+    .about .main-d .left{
+        width: 100%;
+    }
+    .about .main-d .right{
+        width: 100%;
+    }
+    .about{
+        padding: 20px 0;
+    }
+    .about .main-d .right p{
+        margin-top: 10px;
+        font-size: 14px;
+        line-height: 22px;
+    }
+    .group_details h2{
+        margin-bottom: 40px;
+    }
+    .group_details .main-gr .left{
+        width: 100%;
+    text-align: center;
+    }
+    .group_details .main-gr .right{
+        width: 100%;
+    }
+    .testi{
+        width: 100%;
+    }
+    .welcome .welc{
+        width: 100%;
+    }
+    .welcome .welc ul.list li::before{
+        background-size: 79%;
+    }
+    .welcome .welc ul.list li{
+        font-size: 14px;
+        padding: 5px 0;
+    }
+    .welcome .welc .head h2{
+        font-size: 20px;
+    }
+    .welcome .welc ul.list{
+        padding-top: 10px;
+    }
+    .welcome{
+        padding: 20px 0;
+    }
+    .reg-now h2{
+        font-size: 20px;
+        line-height: 34px;
+    }
+    .reg-now h2 .my-cl{
+        display: unset;
+    }
+    .reg-now{
+        padding: 20px 0;
+    }
+    .disclaimer p{
+        font-size: 14px;
+    }
+    footer .main-foo .right p{
+        font-size: 10px;
     }
 }
