--- a/landing-2/css/style.css
+++ b/landing-2/css/style.css
@@ -295,6 +295,7 @@ header .company_logo {
 .main_inner .right .form-main .form-inn {
     width: 100%;
     margin: 10px 0;
+    position: relative;
 }
 
 .main_inner p {
@@ -326,7 +327,12 @@ header .company_logo {
     font-size: 12px;
     padding-left: 5px;
 }
-
+.form-main .form-inn .show-error-msg{
+    position: absolute;
+    z-index: 7;
+    color: red;
+    bottom: -23px;
+}
 .form-main .form-inn input:focus {
     outline: none;
     box-shadow: 0 0 25px rgba(77, 77, 77, 0.438) inset;
@@ -922,6 +928,49 @@ footer .main-foo .right p {
     text-align: center;
     font-size: 16px;
 }
+.thankyou {
+	width:700px;
+	margin:50px auto;
+	background:#fff;
+	box-shadow:2px 2px 10px rgba(0,0,0,.5);
+	text-align:center;
+	padding-bottom:50px;
+}
+.thankyou h1 {
+	text-transform:uppercase;
+	color:#37c1fd;
+    font-size: 20px;
+}
+.thankyou p {
+	border-top:1px dotted #ccc;
+	margin-top:25px;
+	padding-top:10px;
+    font-size: 14px;
+    font-weight: 600;
+    
+}
+.thankyou .para{
+    font-size: 20px;
+}
+.thankyou .para2{
+    font-size: 15px;
+    font-weight: 500;
+}
+.thankarea {
+	width:100%;
+	float:left;
+	background:#0c8ea6;
+	padding:50px 0;
+	margin-bottom:50px;
+}
+.thankarea .fa {
+	background:#fff;
+	width:150px;
+	font-size:90px;
+	color:#0c8ea6;
+	border-radius:100%;
+	line-height:150px;
+}
 
 
 /*********************medium-desktop screen***********************/
@@ -1151,5 +1200,8 @@ footer .main-foo .right p {
     }
     footer .main-foo .right p{
         font-size: 10px;
+    }
+    .thankyou {
+        width: 80%;
     }
 }
