--- a/landing-2/css/style.css
+++ b/landing-2/css/style.css
@@ -337,7 +337,13 @@ header .company_logo {
     outline: none;
     box-shadow: 0 0 25px rgba(77, 77, 77, 0.438) inset;
 }
-
+.main_inner .left video{
+    width: 420px;
+    height: 300px;
+    border: 1px solid #ccc;
+    border-radius: 12px;
+    box-shadow: 0 10px 18px #00000061;
+}
 .invisalign h2 {
     text-align: center;
     color: #2e2f34;
@@ -1203,5 +1209,8 @@ footer .main-foo .right p {
     }
     .thankyou {
         width: 80%;
+    }
+    .main_inner .left video{
+        width: 100%;
     }
 }
